--- a/.github/workflows/daily-task.yml
+++ b/.github/workflows/daily-task.yml
@@ -2,12 +2,11 @@ name: Daily Task Trigger
 
 on:
   schedule:
-    - cron: '0 8 * * *'  # Every day at 8:00 AM UTC
+    - cron: '0 8 * * *'  # every day at 8:00 UTC
 
 jobs:
   call-anvil-endpoint:
     runs-on: ubuntu-latest
     steps:
       - name: Call Anvil Endpoint
-        run: curl -X GET https://IVU3NLU6Q5LR5VG2.anvil.app/_/api/daily_task
-
+        run: curl -X GET https://frightened-prize-ship.anvil.app/_/api/daily_task
