--- a/.github/workflows/daily-task.yml
+++ b/.github/workflows/daily-task.yml
@@ -1,8 +1,10 @@
 name: Daily Task Trigger
 
 on:
+  workflow_dispatch:
   schedule:
-    - cron: '* * * * *'  # every minute UTC
+    - cron: '* * * * *'  # every minute for testing
+
 
 jobs:
   call-anvil-endpoint:
