--- a/.github/workflows/daily-task.yml
+++ b/.github/workflows/daily-task.yml
@@ -3,7 +3,7 @@ name: Daily Task Trigger
 on:
   workflow_dispatch:
   schedule:
-    - cron: '* * * * *'  # every minute for testing
+    - cron: '0 * * * *'  # every minute for testing
 
 
 jobs:
